Chenged delete request and resolve typo errors
