# openapi.json
@@ -876,6 +876,22 @@
               }
             }
           },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "User has no activated trip"
+                    }
+                  }
+                }
+              }
+            }
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -952,7 +968,7 @@
         }
       }
     },
-    "/trip/{tripId}": {
+    "/trip/delete": {
       "delete": {
         "tags": [
           "Trip"
@@ -962,12 +978,19 @@
         "operationId": "deleteTrip",
         "parameters": [
           {
-            "in": "path",
-            "name": "tripId",
-            "required": true,
+            "name": "userId",
+            "in": "query",
             "schema": {
               "type": "string",
-              "example": "63c84ad29ad59e685cafabf3"
+              "example": "1Q2M4DF4NoYiqZ1wCpmhnGF9Oay1"
+            }
+          },
+          {
+            "name": "tripId",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "example": "292ed90808df312625d81dac028b1b9d"
             }
           }
         ],
